@@ -21,6 +21,7 @@ Release 1.5.0 (2012-07-30)
 - IPAddress bitwise operators (&,|,^,~)
 - IPAddress BinaryReader/Writer << and >> operators
 - IPAddress force IPv6 always lowercase (RFC 5952)
+- fixed SF#3538785: SMTPClientSession::sendMessage() should take recipient list 
 
 Release 1.4.4 (2012-07-??)
 ==========================
